# qa-automation-web-api-suite

./: .gitignore  README.md  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml
app/: __init__.py  auth.py  database.py  main.py  models.py
app/static/: styles.css
app/templates/: base.html  login.html  tasks.html
docs/: TEST_STRATEGY.md
reports/: DEF-001-whitespace-title-validation.md  DEF-002-demo-token-security.md  defect-report-template.md
test-cases/: functional-test-cases.md
tests/: conftest.py
tests/api/: test_auth.py  test_authz.py  test_reset_gate.py  test_tasks.py
tests/contract/: test_openapi.py
tests/helpers/: api_client.py  config.py
tests/support/: api_client.py  base_page.py  config.py  factories.py
tests/ui/: test_login.py  test_tasks.py
tests/ui/pages/: login_page.py  tasks_page.py
